infrastructure/gitops/apps/weave-gitops/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops-ingress
  namespace: weave-gitops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: gitops.almckay.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-gitops
                port:
                  number: 9001
  tls:
    - hosts:
        - gitops.almckay.io
      secretName: weave-gitops-tls
